# learn_texteditor

./: CMakeLists.txt  READMI.md
headers/: controller_thread.hpp  dialog_file.hpp  dialog_help.hpp  dialog_insert_char.hpp  main_window.hpp  new_text_edit.hpp  thread_finder.hpp
resources/: help.txt  texteditor.qrc
sources/: controller_thread.cpp  dialog_file.cpp  dialog_help.cpp  dialog_insert_char.cpp  main.cpp  main_window.cpp  new_text_edit.cpp  thread_finder.cpp
